[tool.poetry]
name = "tcp-modbus-aio"
version = "0.2.5"
description = "asyncio client library for tcp modbus devices"
authors = ["Josh Gruenstein <josh@tutorintelligence.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
umodbus = "^1.0.4"
cachetools = "^5.3.3"
types-cachetools = "^5.3.0.7"
typing-extensions = "^4.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^1.7.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
style = "poetry_scripts:style"

[tool.semantic_release]
version_variables = ["tcp_modbus_aio/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"

[tool.isort]
profile = "black"